--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <div class="container-nav">
             <nav class="navigation">
                 <ul class="nav-items">
-                    <li class="nav-item"><a href="#" class="li-item-one">Про збір коштів</a></li>
-                    <li class="nav-item"><a href="#" class="li-item-two">Про нас</a></li>
-                    <li class="nav-item"><a href="#" class="logo-nav">#StandwithUkraine</a></li>
-                    <li class="nav-item"><a href="#" class="li-item-three">Пожертвування</a></li>
+                    <li class="nav-item"><a href="#" class="list-item">Про збір коштів</a></li>
+                    <li class="nav-item"><a href="#" class="list-item">Про нас</a></li>
+                    <li class="nav-item"><a href="#" class="logo-nav">#<span class="logo-stand">Stand</span>with<span class="logo-ukr">Ukraine</span> 
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="list-item">Пожертвування</a></li>
                 </ul>
             </nav> 
         </div>
@@ -29,7 +30,7 @@
     <main>
         <section class="hero">
             <div class="container-hero">
-                <h1 class="hero-heading"><span class="hero-heading-sp">Ой у лузі...</span>
+                <h1 class="hero-heading"><span class="hero-heading-sp">Ой у лузі...</span><br>
                 <span class="hero-heading-sp2">всім по Бандера смузі</span></h1>
             </div>
         </section>
@@ -71,7 +72,45 @@
                 </li>
             </ul>
         </section>
-       
+        <section class="ukraine-photo">
+            <h2 class="photo-heading">Якщо ми дуже допоможемо ЗСУ <br><span class="photo-heading-sp">то наша Україно буде така</span></h2>
+
+        </section>
+                <section class="helping">
+                    <h2 class="help-heading">Проекти пожертвування на ЗСУ</h2>
+                    <ul class="team__list">
+                        <li class="team__item">
+                            <img class="team-img" src="/images/kanistra.png" alt="Каністра">
+                            <div class="team__info--box">
+                                <h2 class="photo-title">Lorem ipsum</h2>
+                                <p class="photo-text">Lorem Ipsum is simply</p>
+                                <h3 class="photo-procent">25%</h3>
+                                <img src="/images/progress.png" class="photo-img-progress" alt="полоса">
+                                <button class="btn-photo">Підтримати</button>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <img class="team-img" src="./images/kalash.png" alt="Автомат">
+                            <div class="team__info--box">
+                                <h2 class="photo-title">Lorem ipsum</h2>
+                                <p class="photo-text">Lorem Ipsum is simply</p>
+                                <h3 class="photo-procent">25%</h3>
+                                <img src="/images/progress.png" class="photo-img-progress" alt="полоса">
+                                <button class="btn-photo">Підтримати</button>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <img class="team-img" src="./images/shahed.png" alt="Безпілотник">
+                            <div class="team__info--box">
+                                <h2 class="photo-title">Lorem ipsum</h3>
+                                <p class="photo-text">Lorem Ipsum is simply</p>
+                                <h3 class="photo-procent">25%</h3>
+                                <img src="/images/progress.png" class="photo-img-progress" alt="полоса">
+                                    <button class="btn-photo">Підтримати</button>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
     </main>
 </body>
 </html>
