--- a/index.html
+++ b/index.html
@@ -111,6 +111,53 @@
                         </li>
                     </ul>
                 </section>
+                <footer>
+                    <h2 href="#" class="logo-footer">#<span class="logo-stand">Stand</span>with<span class="logo-ukr">Ukraine</span>
+                    </h2>
+                        <div class="footer-flex">
+                            <div class="footer-container">
+                                <address>
+                                    <p class="adress">Політика:</p>
+                                    <ul class="contacts-ul">
+                                        <li class="adress-item"><a href="#" class="adress-link">Політика конфіденційності</a></li>
+                                        <li class="adress-item"><a href="#" class="adress-link">Дозволи на обробку персональних даних</a></li>
+                                    </ul>
+                                </address>
+                            </div>
+                            <div class="footer-info-box">
+                                <h2 class="footer-heading">Соц-сети:</h2>
+                                <ul class="social-link">
+                                    <li class="link-items">
+                                        <a href="#" class="link-item">
+                                            <svg class="social-one">
+                                                <use href="./images/sprite.svg#instagram-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="link-items">
+                                        <a href="#" class="link-item">
+                                            <svg class="social-two">
+                                                <use href="./images/sprite.svg#twitter-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="link-items">
+                                        <a href="#" class="link-item">
+                                            <svg class="social-three">
+                                                <use href="./images/sprite.svg#facebook-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="link-items">
+                                        <a href="#" class="link-item">
+                                            <svg class="social-four">
+                                                <use href="./images/sprite.svg#linkedin-2"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                </footer>
     </main>
 </body>
 </html>
