--- a/index.html
+++ b/index.html
@@ -130,29 +130,24 @@
                                     <li class="link-items">
                                         <a href="#" class="link-item">
                                             <svg class="social-one">
-                                                <use href="./images/sprite.svg#instagram-2"></use>
+                                                <use href="/symbol-defs.svg#instagram-2"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="link-items">
                                         <a href="#" class="link-item">
                                             <svg class="social-two">
-                                                <use href="./images/sprite.svg#twitter-2"></use>
+                                                <use href="/symbol-defs.svg#facebook-2"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="link-items">
                                         <a href="#" class="link-item">
                                             <svg class="social-three">
-                                                <use href="./images/sprite.svg#facebook-2"></use>
+                                                <use href="/symbol-defs.svg#twitter-2"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="link-items">
-                                        <a href="#" class="link-item">
-                                            <svg class="social-four">
-                                                <use href="./images/sprite.svg#linkedin-2"></use>
-                                            </svg>
                                         </a>
                                     </li>
                                 </ul>
